deployements/kubernetes/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: myawesomecatapp
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
    - name: websecure
      protocol: HTTPS
      port: 8443
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: tls-cert-myawesomecatapp
