deployements/kubernetes/ingress/routes.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect-https-myawesomecatapp
spec:
  parentRefs:
    - name: myawesomecatapp
      sectionName: web
  hostnames:
    - cats.unamur.stratos-solution.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-myawesomecatapp
spec:
  parentRefs:
    - name: myawesomecatapp
      sectionName: websecure
  hostnames:
    - cats.unamur.stratos-solution.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: myawesomecatapp
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
